2006-01-05  Les Harris  <lescom@comcast.net>

	* src/mud-tray.h, src/mud-tray.c: Converted the old trayicon code into
	a full fledged GObject.
	* src/mud-window.c, src/mud-window.h, src/mud-connection-view.c,
	src/mud-connection-view.h, src/Makefile.am: Added in support for
	the tray icon.

	* src/modules.h: Add missing declaration.

2006-01-05  Daniel Patton  <seven-nation@army.com>

	* src/mud-window.c (mud_window_add_connection_view): Real fix for the
	double free.

2006-01-04  Daniel Patton  <seven-nation@army.com>

	* ui/muds.glade, ui/connect.glade: Dialog fixup.

2006-01-04  Daniel Patton  <seven-nation@army.com>

	* src/mud-window.c (mud_window_add_connection_view): Fix double
	free.

2006-01-04  Jordi Mallach  <jordi@sindominio.net>

	* src/mud-window.c (mud_window_populate_profiles_menu): Mark string
	for translation.

	* src/gnome-mud.c (main): Use GETTEXT_PACKAGE in i18n init.

	* src/mud-preferences-window.c (mud_preferences_window_init),
	src/mud-window-mconnect.c (mud_mconnect_window_init),
	src/mud-window-mudedit.c (mud_edit_window_query_glade),
	(props_window_dialog),
	src/mud-window-mudlist.c (mud_list_window_init),
	src/mud-window-profile.c (mud_profile_window_init),
	(mud_profile_window_add_cb),
	src/mud-window.c (mud_window_about_cb), (mud_window_connect_dialog),
	(mud_window_init): Pass the correct gettext domain to glade_xml_new(),
	so i18n works on glade dialogs.

	* src/mud-window.c (mud_window_about_cb): Don't hardcode the version
	string.

2006-01-04  Les Harris  <lescom@comcast.net>

	* src/svg/Makefile.am: Added file, will install gnome-mud.svg into
	  gmud's datadir.
	  
	* src/mud-window-profile.c, src/mud-window-profile.h: Added files,
	  they implement the profile managment window.
	
	* src/mud-preferences.c, src/mud-preferences.h,
	  src/mud-connection-view.c, src/mud-connection-view.h,
	  src/mud-profile.c, src/mud-profile.h, src/mud-window.c,
	  src/mud-window.h, src/mud-window-mconnect.c,